<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name">PencariMovie Server</string>
    <string name="app_name">PencariMovie Server</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="open_browser">Open Browser</string>
    <string name="open_web">Open Web</string>
    <string name="addon_setup">Addon Setup</string>
    <string name="server_settings">Settings</string>
    <string name="cloudflare_tunnel">Cloudflare Tunnel</string>
    <string name="tunnel_off">Tunnel: Off</string>
    <string name="tunnel_starting">Tunnel: Connecting…</string>
    <string name="status_idle">Status: Idle</string>
    <string name="status_running">Status: Running</string>
    <string name="status_error">Status: Error</string>
    <string name="status_starting">Status: Starting...</string>
    <string name="status_stopping">Status: Stopping...</string>
    <string name="auto_start_on_boot">Auto start on boot</string>
    <string name="battery_saver_mode">Keep alive in background</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="reload">Reload</string>
    <string name="update_download">Download Update</string>
    <string name="update_available">Update available: v%1$s (installed v%2$s)</string>
    <string name="update_downloading">Downloading…</string>
    <string name="update_downloading_pct">Downloading… %1$d%%</string>
    <string name="update_installing">Opening installer…</string>
    <string name="update_download_failed">Download failed. Opening the release page instead.</string>
    <string name="update_install_failed">Could not open the installer. Opening the release page instead.</string>
</resources>
